2008-06-29  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.3 TAGGED FOR RELEASE ***

	* generic/tcl.h:	Bump to 8.5.3 for release.
	* library/init.tcl:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* doc/ObjectType.3:	Updated documentation of the Tcl_ObjType
	struct to match expectations of Tcl 8.5 [Bug 1917650].

	* generic/tclPathObj.c:  Plug memory leak in [Bug 1999176] fix.  Thanks
	Rolf Ade for detecting.

2008-06-28  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPathObj.c:  Plug memory leak in [Bug 1972879] fix.  Thanks
	Rolf Ade for detecting and Dan Steffen for the fix [Bug 2004654].

2008-06-26  Andreas Kupries  <andreask@activestate.com>

	* unix/Makefile.in: Followup to my change of 2008-06-25, make code
	generated by the Makefile and put into the installd tm.tcl
	conditional on interpreter safeness as well. Thanks to Daniel
	Steffen for reminding me of that code.

2008-06-25  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Update for 8.5.3 release.

2008-06-25  Andreas Kupries  <andreask@activestate.com>

	* library/tm.tcl:	Modified the handling of Tcl Modules and of the
	* library/safe.tcl:	Safe Base to interact nicely with each other,
	* library/init.tcl:	enabling requiring Tcl Modules in safe
	* tests/safe.test:	interpreters. Fixes [Bug 1999119].

2008-06-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/rules.vc:    Backported fix for dde/registry versions and
	* win/makefile.vc: the staticpkg build option

2008-06-24  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPathObj.c: Fixed some internals management in the "path"
	Tcl_ObjType for the empty string value.  Problem led to a crash in
	the command [glob -dir {} a]. [Bug 1999176].

2008-06-23  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPathObj.c: Fixed bug in Tcl_GetTranslatedPath() when
	operating on the "Special path" variant of the "path" Tcl_ObjType